--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Parse *.rpp files",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -p lib",
+    "build:watch": "tsc --watch -p lib",
     "start": "node --harmony index",
     "clean": "rimraf posts/*",
-    "test": "yarn lint && tape test/*-spec.js | tap-dot",
+    "test:unit": "nyc --silent --no-clean mocha -r ts-node/register lib/**/*.spec.ts",
     "coverage": "nyc --reporter=lcov --reporter=text-summary tape test/*-spec.js nolarge",
     "lint": "eslint .",
     "prettier:write": "prettier --write .",
@@ -22,18 +24,34 @@
   "author": "Kuba Wolanin <hi@kubawolanin.com>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "@types/chai": "^4.2.16",
+    "@types/debug": "^4.1.5",
+    "@types/glob": "^7.1.3",
+    "@types/mkdirp": "^1.0.1",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.37",
+    "@types/prettier": "^2.2.3",
+    "@types/yargs": "^16.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "chai": "^4.3.4",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.24.0",
     "eslint-config-prettier": "^6.11.0",
     "mkdirp": "^1.0.4",
-    "nyc": "^15.0.1",
+    "mocha": "^8.3.2",
+    "mocha-chai-jest-snapshot": "^1.1.1",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "tap-dot": "^2.0.0",
-    "tape": "^5.0.0"
+    "tape": "^5.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "config": "^3.3.1",
-    "midi-writer-js": "^1.7.4",
-    "minimist": "^1.2.5",
-    "nearley": "^2.19.3"
+    "midi-writer-js": "^1.7.4"
   }
 }
