--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node --harmony index",
     "clean": "rimraf posts/*",
     "test:unit": "nyc --silent --no-clean mocha -r ts-node/register lib/**/*.spec.ts",
-    "coverage": "nyc --reporter=lcov --reporter=text-summary tape test/*-spec.js nolarge",
+    "test:coverage-report": "nyc report --reporter=lcov --reporter=text --reporter=html",
+    "test:codecov": "codecov",
     "lint": "eslint .",
     "prettier:write": "prettier --write .",
     "prettier:check": "prettier --check .",
@@ -35,12 +36,15 @@
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "chai": "^4.3.4",
+    "codecov": "^3.8.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^6.11.0",
+    "glob": "^7.1.6",
     "mkdirp": "^1.0.4",
     "mocha": "^8.3.2",
     "mocha-chai-jest-snapshot": "^1.1.1",
+    "mocha-chai-snapshot": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
